💄 feat: Estilizaçao CSS do projeto

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,41 +1,42 @@
-.header{
-    background-color:#707070;
+.header {
+  background-color: #707070;
 }
-.titulo{
-    font-size: 20px;
-    text-align: center;
-    padding-top: 69px;
-    color: #FFFFFF;
+.titulo {
+  font-size: 20px;
+  text-align: center;
+  padding-top: 69px;
+  color: #ffffff;
 }
 
-.tituloDois{
-    font-size: 40px;
-    text-align: center;
-    padding-bottom: 24px;
-    color: #FFFFFF;
+.tituloDois {
+  font-size: 40px;
+  text-align: center;
+  padding-bottom: 24px;
+  color: #ffffff;
 }
-.subtitulo{
-    font-size: 14px;
-    text-align: center;
-    padding-bottom: 50px;
-    color: #FFFFFF;
+.subtitulo {
+  font-size: 14px;
+  text-align: center;
+  padding-bottom: 50px;
+  color: #ffffff;
 }
-.botoes{
-    background: #FFFFFF;
-    border: 1px solid #707070;
-    border-radius: 4px;
-    text-align: center; 
-    font: normal normal normal 14px/16px Helvetica Neue;
-    color: #888888;
-    width: 160px;
-    height: 40px;
+.botoes {
+  background: #ffffff;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  text-align: center;
+  color: #888888;
+  width: 160px;
+  height: 40px;
 }
-.botao{
-    padding-top: 50px;
-    padding-bottom: 129px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    gap: 40px;
-    
+.botao {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 129px;
+  margin: auto;
+  gap: 40px;
 }
