--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,16 +1,26 @@
-.principal{
-    display: flex;
+.principal {
+  display: flex;
+  gap: 30px;
 }
-.texto{
-    display:flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    width: 50%;
-    
+.texto {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 80%;
+  padding-left: 200px;
+  text-align: start;
+  color: #888888;
 }
-.formulario{
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    width: 50%;
+.formulario {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  width: 50%;
+  margin: 50px 0px;
+}
+.tituloh1 {
+  margin: 20px;
+}
+.paragrafo {
+  text-align: start;
 }
